# neu_net_rust

./: .gitignore  Cargo.toml  README.md  benchmark.rs
neural_network/: Cargo.toml
neural_network/src/: lib.rs
neural_network/src/neu_net/: neu_net.rs
neural_network/src/neu_net/builder/: activations.rs  builder.rs  costs.rs  data.rs
neural_network/src/neu_net/test/: test_activations.rs  test_builder.rs  test_costs.rs  test_neu_net.rs
script/: Cargo.toml
script/src/: main.rs
scripts/: Cargo.toml
scripts/first/: Cargo.toml
scripts/first/src/: main.rs
scripts/first_script/: Cargo.toml
scripts/first_script/benches/first_benchmark/: main.rs
scripts/first_script/src/: main.rs
scripts/second/: Cargo.toml
scripts/second_script/: Cargo.toml
scripts/second_script/src/: main.rs
src/: activations.rs  builder.rs  lib.rs  main.rs  neu_net.rs
src/builder/: activations.rs  builder.rs  costs.rs  data.rs  mod.rs
src/neu_net/: neu_net.rs
src/neu_net/builder/: activations.rs  builder.rs  costs.rs
src/neu_net/test/: test_costs.rs
src/test/: mod.rs  test_activations.rs  test_builder.rs  test_costs.rs  test_data.rs  test_neu_net.rs
tests/: test_matrix.rs
utils/: Cargo.toml
utils/src/: mnist.rs
