[package]
name = "first_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neural_network = {path = "../../neural_network"}
utils = {path = "../../utils"}

[[bin]]
name = "main"
test = false
bench = false
path = "src/main.rs"